--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,3 +14,11 @@
     
     .table thead {@apply bg-black text-white text-left;}
     .table th ,.table td  {padding: 5px}
+
+    .btn{ 
+        @apply p-3 rounded
+    }
+
+    .btn-delete{
+        @apply bg-red-300 w-full p-3 rounded hover:bg-red-500 hover:text-white
+    }
