--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,12 +8,93 @@
     }
 
     .table{
-
         @apply w-full;
     }
     
     .table thead {@apply bg-black text-white text-left;}
     .table th ,.table td  {padding: 5px}
+/* Fixhead Table   */
+
+        th {
+          vertical-align: bottom;
+          background-color: black;
+          color: #fff;
+        }
+
+        /* Fixed Headers */
+
+        th {
+          position: -webkit-sticky;
+          position: sticky;
+          top: 0;
+          z-index: 2;
+        }
+
+        th[scope=row] {
+          position: -webkit-sticky;
+          position: sticky;
+          left: 0;
+          z-index: 1;
+        }
+
+        th[scope=row] {
+          text-align: left;
+          vertical-align: top;
+          color: inherit;
+          background-color: white;
+        }
+
+        th:not([scope=row]):first-child {
+          left: 0;
+          z-index: 3;
+        }
+
+        /* Scrolling wrapper */
+
+        div[tabindex="0"][aria-labelledby][role="region"] {
+          overflow: auto;
+        }
+
+        div[tabindex="0"][aria-labelledby][role="region"]:focus {
+          box-shadow: 0 0 .5em rgba(0,0,0,.5);
+          outline: .1em solid rgba(0,0,0,.1);
+        }
+
+        div[tabindex="0"][aria-labelledby][role="region"] table {
+          margin: 0;
+        }
+
+        div[tabindex="0"][aria-labelledby][role="region"].rowheaders {
+          background:
+            linear-gradient(to right, transparent 30%, rgba(255,255,255,0)),
+            linear-gradient(to right, rgba(255,255,255,0), white 70%) 0 100%,
+            radial-gradient(farthest-side at 0% 50%, rgba(0,0,0,0.2), rgba(0,0,0,0)),
+            radial-gradient(farthest-side at 100% 50%, rgba(0,0,0,0.2), rgba(0,0,0,0)) 0 100%;
+          background-repeat: no-repeat;
+          background-color: #fff;
+          background-size: 4em 100%, 4em 100%, 1.4em 100%, 1.4em 100%;
+          background-position: 0 0, 100%, 0 0, 100%;
+          background-attachment: local, local, scroll, scroll;
+        }
+
+        /* Strictly for making the scrolling happen. */
+
+        th[scope=row] {
+          min-width: 50vw;
+        }
+
+        @media all and (min-width: 30em) {
+          th[scope=row] {
+            min-width: 20em;
+          }
+        }
+          
+        /*Tamaño del Contenedor*/
+        div[tabindex="0"][aria-labelledby][role="region"]:nth-child(3) {
+          max-height: 43em;
+        }
+
+
 
     .btn{ 
         @apply p-3 rounded
