--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,7 +14,6 @@
     .table thead {@apply bg-black text-white text-left;}
     .table th ,.table td  {padding: 5px}
 /* Fixhead Table   */
-
         th {
           vertical-align: bottom;
           background-color: black;
@@ -102,4 +101,8 @@
 
     .btn-delete{
         @apply bg-red-300 w-full p-3 rounded hover:bg-red-500 hover:text-white
+    }
+
+    .input-table{
+      @apply border-0 border-b rounded-lg w-full focus:border-blue-200 focus:border-0
     }
