--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,91 +8,43 @@
     }
 
     .table{
-        @apply w-full;
+        @apply w-full border-2 border-black;
     }
-    
+
     .table thead {@apply bg-black text-white text-left;}
-    .table th ,.table td  {padding: 5px}
-/* Fixhead Table   */
-        th {
-          vertical-align: bottom;
-          background-color: black;
-          color: #fff;
-        }
 
-        /* Fixed Headers */
 
-        th {
-          position: -webkit-sticky;
-          position: sticky;
-          top: 0;
-          z-index: 2;
-        }
 
-        th[scope=row] {
-          position: -webkit-sticky;
-          position: sticky;
-          left: 0;
-          z-index: 1;
-        }
+    .table-responsive{
+        @apply table-fixed overflow-x-scroll md:overflow-hidden
+    }
 
-        th[scope=row] {
-          text-align: left;
-          vertical-align: top;
-          color: inherit;
-          background-color: white;
-        }
+    .table-responsive thead tr{
+      @apply flex w-full
+    }
 
-        th:not([scope=row]):first-child {
-          left: 0;
-          z-index: 3;
-        }
+    .table-responsive tbody{    
+        @apply overflow-y-scroll  flex flex-col justify-between w-full;
+    }
 
-        /* Scrolling wrapper */
+    .table-simetric th, .table-simetric td {
+        @apply w-1/5
+    }
+    .table-responsive th , .table-responsive td  {
 
-        div[tabindex="0"][aria-labelledby][role="region"] {
-          overflow: auto;
-        }
+        @apply px-3 py-1
+    }
 
-        div[tabindex="0"][aria-labelledby][role="region"]:focus {
-          box-shadow: 0 0 .5em rgba(0,0,0,.5);
-          outline: .1em solid rgba(0,0,0,.1);
-        }
 
-        div[tabindex="0"][aria-labelledby][role="region"] table {
-          margin: 0;
-        }
 
-        div[tabindex="0"][aria-labelledby][role="region"].rowheaders {
-          background:
-            linear-gradient(to right, transparent 30%, rgba(255,255,255,0)),
-            linear-gradient(to right, rgba(255,255,255,0), white 70%) 0 100%,
-            radial-gradient(farthest-side at 0% 50%, rgba(0,0,0,0.2), rgba(0,0,0,0)),
-            radial-gradient(farthest-side at 100% 50%, rgba(0,0,0,0.2), rgba(0,0,0,0)) 0 100%;
-          background-repeat: no-repeat;
-          background-color: #fff;
-          background-size: 4em 100%, 4em 100%, 1.4em 100%, 1.4em 100%;
-          background-position: 0 0, 100%, 0 0, 100%;
-          background-attachment: local, local, scroll, scroll;
-        }
-
-        /* Strictly for making the scrolling happen. */
-
-        th[scope=row] {
-          min-width: 50vw;
-        }
-
-        @media all and (min-width: 30em) {
-          th[scope=row] {
-            min-width: 20em;
-          }
-        }
-          
-        /*Tamaño del Contenedor*/
-        div[tabindex="0"][aria-labelledby][role="region"]:nth-child(3) {
-          max-height: 43em;
-        }
-
+    @media (max-width: 700px){
+        .table-responsive tbody{
+            height: 60vh;
+        }   
+    }
+    .table-responsive tbody tr{
+        @apply flex w-full cursor-pointer
+    }
 
 
     .btn{ 
@@ -105,4 +57,26 @@
 
     .input-table{
       @apply border-0 border-b rounded-lg w-full focus:border-blue-200 focus:border-0
+    }
+
+
+    .color0{
+        background: blue;
+    }    
+
+    .color1{
+        background: green;
+    }    
+    .color2{
+        background: blue;
+    }    
+    .color3{
+        background: blue;
+    }    
+
+    .color4{
+        background: blue;
+    }    
+    .color5{
+        background: blue;
     }
