--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -56,7 +56,7 @@
     }
 
     .input-table{
-      @apply border-0 border-b-4 rounded-lg w-full focus:border-blue-200 focus:border-0
+      @apply border-0 border-b-2 w-full focus:border-blue-200 focus:border-0
     }
 
 
